# cargo-plugin-utils

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cog.toml  migrate-repos.sh
.claude/skills/commit/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.githooks/: pre-commit
.github/: CONTRIBUTING.md  FUNDING.yml  MAINTAINERS.md  PUBLISH.md
.github/actions/: README.md
.github/actions/generate-changelog/: action.yml
.github/actions/setup-cargo-binstall/: action.yml
.github/workflows/: auto-version-bump.yml  ci.yml
docs/adr/: 0001-pty-library-selection.mdx
src/: common.rs  lib.rs  logger.rs  logger.rs.tests-backup  progress_logger.rs  scrolling.rs  tty.rs
src/logger/: tests.rs
src/scrolling/: tests.rs
