[package]
name = "cargo-plugin-utils"
description = "Shared utilities for cargo plugins (logger, subprocess handling, common functions)"
version = "0.0.9"
edition = "2024"
license-file = "LICENSE"
keywords = ["cargo", "plugin", "utilities", "logger", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
repository = "https://github.com/dataroadinc/cargo-plugin-utils"
documentation = "https://docs.rs/cargo-plugin-utils"
homepage = "https://github.com/dataroadinc/cargo-plugin-utils"
rust-version = "1.93.0"
publish = true

exclude = [
    ".cargo/",
    ".cargo-husky/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "cog.toml",
    "rustfmt.toml",
    "scripts/",
]

[dependencies]
anyhow = "1.0.101"
cargo_metadata = "0.23.1"
gix = { version = "0.77.0", default-features = false, features = ["revision"] }
console = "0.16.2"
indicatif = "0.18.3"
carlog = "0.1"
portable-pty = "0.9.0"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "time",
] }

[build-dependencies]
sloughi = "0.3"

[dev-dependencies]
tempfile = "3.10"
